--- a/sass/components/web-studio-content/_team-list.scss
+++ b/sass/components/web-studio-content/_team-list.scss
@@ -52,6 +52,7 @@
 }
 
 .team-list__name {
+  padding: 30px;
   background-color: var(--tertiary-color-text);
   text-align: center;
   border-radius: 0px 0px 5px 5px;
@@ -62,7 +63,6 @@
   font-size: 16px;
   line-height: 1.18;
   color: var(--primary-color-text);
-  padding-top: 30px;
   padding-bottom: 0px;
   margin: 0px;
 }
