--- a/css/main.css
+++ b/css/main.css
@@ -841,7 +841,7 @@ p {
 }
 
 .team-list__name {
-  padding: 30px;
+  padding: 30px 32px;
   background-color: var(--tertiary-color-text);
   text-align: center;
   border-radius: 0px 0px 5px 5px;
