--- a/sass/components/web-studio-content/_team-list.scss
+++ b/sass/components/web-studio-content/_team-list.scss
@@ -52,7 +52,7 @@
 }
 
 .team-list__name {
-  padding: 30px;
+  padding: 30px 32px;
   background-color: var(--tertiary-color-text);
   text-align: center;
   border-radius: 0px 0px 5px 5px;
