--- a/sass/components/web-studio-content/_team-list.scss
+++ b/sass/components/web-studio-content/_team-list.scss
@@ -63,8 +63,8 @@
   font-size: 16px;
   line-height: 1.18;
   color: var(--primary-color-text);
-  padding-bottom: 0px;
   margin: 0px;
+  margin-bottom: 10px;
 }
 
 .team-list__subtitle {
@@ -72,7 +72,6 @@
   font-size: 16px;
   line-height: 1.18;
   color: var(--secondary-color-text);
-  padding-top: 10px;
-  padding-bottom: 0px;
   margin: 0px;
+  margin-bottom: 16px;
 }
