--- a/css/main.css
+++ b/css/main.css
@@ -1092,6 +1092,18 @@ p {
   margin-bottom: 20px;
 }
 
+@media screen and (min-width: 768px) {
+  .social-network__text {
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .social-network__text {
+    text-align: start;
+  }
+}
+
 .social-network__list {
   display: -webkit-box;
   display: -ms-flexbox;
