--- a/sass/components/footer-page/_social-network.scss
+++ b/sass/components/footer-page/_social-network.scss
@@ -20,6 +20,14 @@
   text-align: center;
   color: var(--tertiary-color-text);
   margin-bottom: 20px;
+
+  @media screen and (min-width: 768px) {
+    text-align: center;
+  }
+
+  @media screen and (min-width: 1200px) {
+    text-align: start;
+  }
 }
 
 .social-network__list {
