--- a/css/main.css
+++ b/css/main.css
@@ -1767,6 +1767,10 @@ p {
   padding: 0px;
 }
 
+.mobile-nav {
+  margin-bottom: 50px;
+}
+
 .mobile-nav__item:not(:last-child) {
   margin-bottom: 32px;
 }
@@ -1774,10 +1778,16 @@ p {
 .mobile-nav__link {
   font-style: normal;
   font-weight: 500;
-  font-size: 40px;
+  font-size: 30px;
   line-height: 1.17;
   letter-spacing: 0.02em;
   color: var(--primary-color-text);
+}
+
+@media screen and (min-width: 480px) {
+  .mobile-nav__link {
+    font-size: 40px;
+  }
 }
 
 .mobile-nav__link:hover, .mobile-nav__link:focus {
@@ -1799,10 +1809,16 @@ p {
 .mobile-contact-link__link {
   font-style: normal;
   font-weight: 500;
-  font-size: 34px;
+  font-size: 25px;
   line-height: 1.17;
   letter-spacing: 0.02em;
   color: var(--accent-color);
+}
+
+@media screen and (min-width: 480px) {
+  .mobile-contact-link__link {
+    font-size: 34px;
+  }
 }
 
 .mobile-contact-link__link--color {
