--- a/css/mobile-menu.css
+++ b/css/mobile-menu.css
@@ -38,6 +38,10 @@
   padding: 0px;
 }
 
+.mobile-nav {
+  margin-bottom: 50px;
+}
+
 .mobile-nav__item:not(:last-child) {
   margin-bottom: 32px;
 }
@@ -45,10 +49,16 @@
 .mobile-nav__link {
   font-style: normal;
   font-weight: 500;
-  font-size: 40px;
+  font-size: 30px;
   line-height: 1.17;
   letter-spacing: 0.02em;
   color: var(--primary-color-text);
+}
+
+@media screen and (min-width: 480px) {
+  .mobile-nav__link {
+    font-size: 40px;
+  }
 }
 
 .mobile-nav__link:hover, .mobile-nav__link:focus {
@@ -70,10 +80,16 @@
 .mobile-contact-link__link {
   font-style: normal;
   font-weight: 500;
-  font-size: 34px;
+  font-size: 25px;
   line-height: 1.17;
   letter-spacing: 0.02em;
   color: var(--accent-color);
+}
+
+@media screen and (min-width: 480px) {
+  .mobile-contact-link__link {
+    font-size: 34px;
+  }
 }
 
 .mobile-contact-link__link--color {
