--- a/css/main.css
+++ b/css/main.css
@@ -1838,6 +1838,10 @@ p {
       flex-wrap: wrap;
 }
 
+.mobile-social-network__item {
+  margin: 10px 0px;
+}
+
 .mobile-social-network__item:not(:last-child)::after {
   content: '';
   width: 0px;
