--- a/sass/components/mobile-menu/mobile-menu.scss
+++ b/sass/components/mobile-menu/mobile-menu.scss
@@ -94,6 +94,10 @@
   flex-wrap: wrap;
 }
 
+.mobile-social-network__item {
+  margin: 8px 0px;
+}
+
 .mobile-social-network__item:not(:last-child) {
   &::after {
     content: '';
