--- a/css/mobile-menu.css
+++ b/css/mobile-menu.css
@@ -109,8 +109,10 @@
       flex-wrap: wrap;
 }
 
-.mobile-social-network__item {
-  margin: 8px 0px;
+@media screen and (max-width: 480px) {
+  .mobile-social-network__item {
+    margin: 8px 0px;
+  }
 }
 
 .mobile-social-network__item:not(:last-child)::after {
