--- a/sass/components/mobile-menu/mobile-menu.scss
+++ b/sass/components/mobile-menu/mobile-menu.scss
@@ -95,7 +95,9 @@
 }
 
 .mobile-social-network__item {
-  margin: 8px 0px;
+  @media screen and (max-width: 480px) {
+    margin: 8px 0px;
+  }
 }
 
 .mobile-social-network__item:not(:last-child) {
