--- a/css/mobile-menu.css
+++ b/css/mobile-menu.css
@@ -1,5 +1,13 @@
 .mobile-menu {
   position: fixed;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
   top: 0;
   left: 0;
   background-color: var(--tertiary-color-text);
@@ -107,12 +115,6 @@
   display: inline-flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-}
-
-@media screen and (max-width: 480px) {
-  .mobile-social-network__item {
-    margin: 8px 0px;
-  }
 }
 
 .mobile-social-network__item:not(:last-child)::after {
