added padding for menu

--- a/css/main.css
+++ b/css/main.css
@@ -1848,6 +1848,10 @@ p {
       flex-wrap: wrap;
 }
 
+.mobile-social-network__item {
+  padding: 10px 0px;
+}
+
 .mobile-social-network__item:not(:last-child)::after {
   content: '';
   width: 0px;
