--- a/css/mobile-menu.css
+++ b/css/mobile-menu.css
@@ -119,6 +119,10 @@
       flex-wrap: wrap;
 }
 
+.mobile-social-network__item {
+  padding: 10px 0px;
+}
+
 .mobile-social-network__item:not(:last-child)::after {
   content: '';
   width: 0px;
