--- a/sass/components/mobile-menu/mobile-menu.scss
+++ b/sass/components/mobile-menu/mobile-menu.scss
@@ -97,6 +97,10 @@
   flex-wrap: wrap;
 }
 
+.mobile-social-network__item {
+  padding: 10px 0px;
+}
+
 .mobile-social-network__item:not(:last-child) {
   &::after {
     content: '';
