added padding for hero img

--- a/css/main.css
+++ b/css/main.css
@@ -509,8 +509,14 @@ p {
 
 .hero {
   text-align: center;
-  padding-top: 200px;
-  padding-bottom: 280px;
+  padding: 118px 0px;
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    padding-top: 200px;
+    padding-bottom: 280px;
+  }
 }
 
 .hero__title {
